--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Generate configuration file
         run: make defconfig
+             cp package/.config .
+             ls -ltr
 
       - name: Make download
         run: |
