--- a/.github/workflows/openwrt-ci-0621.yml
+++ b/.github/workflows/openwrt-ci-0621.yml
@@ -72,41 +72,22 @@ jobs:
 
       - name: Prepare artifact
         run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
+        
+      - name: zip artfact
+        run: zip -q -r openwrt ./bin/targets/x86/64/openwrt-x86-64-combined*.img
 
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: OpenWrt_firmware
-          path: ./bin/targets/x86/64/openwrt-x86-64-combined*.img
+          name: OpenWrt_firmware_zip
+          path: ./openwrt.zip
 
-      - name: Create release
-        if: github.event == 'push'
-        id: create_release
-        uses: actions/create-release@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false      
-
-      - name: Upload release asset
-        if: github.event == 'push'
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/targets/x86/64/openwrt-x86-64-combined*.img
-    # Deploy
       - name: Deploy aliyun
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOYKEYALIYUN }}
           ARGS: "-avz --delete"
-          SOURCE: "./bin/targets/x86/64/openwrt-x86-64-combined*.img"
+          SOURCE: "./openwrt.zip"
           REMOTE_HOST: "47.104.20.226"
           REMOTE_USER: "root"
           TARGET: "/var/www/openwrt"  
