--- a/.github/workflows/openwrt-ci-0621.yml
+++ b/.github/workflows/openwrt-ci-0621.yml
@@ -74,20 +74,20 @@ jobs:
         run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
         
       - name: zip artfact
-        run: zip -q -r openwrt$(date +%Y%m%d%H%m) ./bin/targets/x86/64/openwrt-x86-64-combined*.img
+        run: zip -q -r openwrt$ ./bin/targets/x86/64/openwrt-x86-64-combined*.img
 
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
           name: OpenWrt_firmware_zip
-          path: ./openwrt*.zip
+          path: ./openwrt.zip
 
       - name: Deploy aliyun
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOYKEYALIYUN }}
           ARGS: "-avz --delete"
-          SOURCE: "./openwrt*.zip"
+          SOURCE: "./openwrt.zip"
           REMOTE_HOST: "47.104.20.226"
           REMOTE_USER: "root"
-          TARGET: "/var/www/openwrt"  
+          TARGET: "/var/www/openwrt$(date +%Y%m%d%H%m)"  
