--- a/.github/workflows/testc-cpp.yml
+++ b/.github/workflows/testc-cpp.yml
@@ -26,7 +26,7 @@ jobs:
       
       - name: zip artfact
         run: |
-          zip -q -r openwrt$(date +%Y%m%d%H%m) fff.txt
+          zip -q -r openwrt_$(date +%Y%m%d%H%m) fff.txt
           ls -ltr
   
       - name: Deploy aliyun
