--- a/.github/workflows/minorOpenwrt.yml
+++ b/.github/workflows/minorOpenwrt.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: OpenWrt_firmware_kbalde
-          path: ./bin/targets/x86/64/openwrt-x86-64-combined*.img
+          path: ./openwrt*.zip
 
       - name: Deploy aliyun
         uses: easingthemes/ssh-deploy@v2.1.2
